mysql/hardening/cnp-mitre-ingress-block-mysql-pod-communication-on-3306.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-ingress-block-mysql-pod-communication-on-3306
  namespace: default
spec:
  description: "To allow communication to mysql pods from specific pods on port 3306"
  endpointSelector:
    matchLabels:
      app: mysql
  ingress: 
  - fromEndpoints:
    - matchLabels:
        app: frontend   #change app: frontend to match your label
    toPorts:
    -  ports:
       -  port: '3306'
          protocol: ANY
